# dflaten.dev

./: .gitignore  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
src/lib/blog/: index-template.html  post-template.html
src/lib/blog/posts/: building-custom-llm.md  building-with-agents.md  creating-alexa-replacement.md  doing-code-reviews.md  flutter-revelations.md  http-client-factory.md  learning-linux-with-arch-linux.md  multiple-wordpress-containers.md  nba-rest.md  personal-aws-access.md  postman-replacement.md  rewrite-plain-html.md  s3-spa.md  sample-blog-post.md  self-hosted-image-service.md  self-taught-classical-edu.md  storage-tracking-service.md  supabase-tips.md
src/static/: index.css  index.html  root.css  theme.js
src/static/blog/: index.css
src/static/projects/: index.css  index.html
tests/: test_build.py
